--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,19 @@
 ---
 # ----------------------------------------------------------------------------------------
-# -- Docs: https://github.com/cluster-apps-on-docker/spark-standalone-cluster-on-docker --
+# 
 # ----------------------------------------------------------------------------------------
-version: "3.6"
+version: "3.8"
 volumes:
   shared-workspace:
     name: "hadoop-distributed-file-system"
     driver: local
+  db:
+    name: "db"
+    driver: local          
 services:
   jupyterlab:
     image: jupyterlab:3.4.3-spark-3.0.0
+    restart: always
     container_name: jupyterlab
     ports:
       - 8888:8888
@@ -18,6 +22,7 @@ services:
       - shared-workspace:/opt/workspace
   spark-master:
     image: spark-master:3.0.0
+    restart: always
     container_name: spark-master
     ports:
       - 8080:8080
@@ -26,10 +31,11 @@ services:
       - shared-workspace:/opt/workspace
   spark-worker-1:
     image: spark-worker:3.0.0
+    restart: always
     container_name: spark-worker-1
     environment:
       - SPARK_WORKER_CORES=1
-      - SPARK_WORKER_MEMORY=2G
+      - SPARK_WORKER_MEMORY=512M
     ports:
       - 8081:8081
     volumes:
@@ -38,13 +44,25 @@ services:
       - spark-master
   spark-worker-2:
     image: spark-worker:3.0.0
+    restart: always
     container_name: spark-worker-2
     environment:
       - SPARK_WORKER_CORES=1
-      - SPARK_WORKER_MEMORY=1G
+      - SPARK_WORKER_MEMORY=512M
     ports:
       - 8082:8081
     volumes:
       - shared-workspace:/opt/workspace
     depends_on:
       - spark-master
+  db:
+    image: postgres
+    restart: always
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    ports:
+      - '5432:5432'
+    volumes: 
+      - db:/var/lib/postgresql/data
+      - ./docker/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
