--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 ---
 # ----------------------------------------------------------------------------------------
-# 
+# A docker compose stack with Spark, Jupyterlab, Scala, postgres
 # ----------------------------------------------------------------------------------------
 version: "3.8"
 volumes:
