--- a/docker/postgres/Dockerfile
+++ b/docker/postgres/Dockerfile
@@ -1,1 +1,16 @@
-FROM arm64v8/postgres
+ARG postgres_version
+FROM postgres:${postgres_version}
+
+LABEL manteiner="Raphaël MANSUY <raphael.mansuy@gmail.com>"
+
+# -- Layer: Image Metadata
+
+ARG build_date
+
+LABEL org.label-schema.build-date=${build_date}
+LABEL org.label-schema.name="Postgres database"
+LABEL org.label-schema.description="Spark JupyterLab development environment"
+LABEL org.label-schema.url="https://github.com/raphaelmansuy/spark-jupyter-env-docker"
+LABEL org.label-schema.schema-version="1.0"
+
+
