--- a/docker/spark-base/Dockerfile
+++ b/docker/spark-base/Dockerfile
@@ -7,7 +7,7 @@ ARG build_date
 
 LABEL org.label-schema.build-date=${build_date}
 LABEL org.label-schema.name="Apache Spark Standalone Cluster on Docker - Spark Base Image"
-LABEL org.label-schema.description="Spark base image shipped Spark"
+LABEL org.label-schema.description="Spark JupyterLab development environment"
 LABEL org.label-schema.url="https://github.com/raphaelmansuy/spark-jupyter-env-docker"
 LABEL org.label-schema.schema-version="1.0"
 
