--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,15 @@ volumes:
     driver: local
   db:
     name: "db"
-    driver: local          
+    driver: local
+  minio_data:
+    name: "minio_data"
+    driver: local
+  dremio_data:
+    name: "dremio_data"
+    driver: local
 services:
+# Jupyer lab
   jupyterlab:
     image: jupyterlab:3.4.3-spark-3.0.0
     restart: always
@@ -20,6 +27,7 @@ services:
       - 4040:4040
     volumes:
       - shared-workspace:/opt/workspace
+# Spark      
   spark-master:
     image: spark-master:3.0.0
     restart: always
@@ -55,14 +63,98 @@ services:
       - shared-workspace:/opt/workspace
     depends_on:
       - spark-master
-  db:
+# Postgres database      
+  postgres:
     image: postgres
     restart: always
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+    logging:
+      options:
+        max-size: 10m
+        max-file: "3"
     ports:
-      - '5432:5432'
-    volumes: 
+      - "5432:5432"
+    volumes:
       - db:/var/lib/postgresql/data
       - ./docker/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
+# Minio an S3 compatible object store      
+  minio:
+    image: minio/minio:RELEASE.2022-06-07T00-33-41Z
+    container_name: minio-srv
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=minioadmin
+    command: server --console-address ":9001" /data
+    volumes:
+      - minio_data:/data
+# Create buckets for minio
+  createbuckets:
+    image: minio/mc:RELEASE.2022-05-09T04-08-26Z
+    depends_on:
+      - minio
+    links:
+      - minio
+    restart: on-failure:5
+    entrypoint: >
+      /bin/sh -c "
+      sleep 5;
+      mc alias set myminio http://minio:9000 minioadmin minioadmin;
+      mc mb myminio/bronze;
+      mc mb myminio/silver;
+      mc mb myminio/gold;
+      mc mb myminio/tech;
+      mc policy set public myminio/bronze;
+      mc policy set public myminio/silver;
+      mc policy set public myminio/gold;
+      mc policy set public myminio/tech;"
+# Vault Manage Secrets & Protect Sensitive Data https://www.vaultproject.io/
+  vault:
+    image: vault:1.10.3
+    container_name: vault
+    restart: on-failure:10
+    ports:
+      - "8200:8200"
+    environment:
+      VAULT_ADDR: 'https://0.0.0.0:8200'
+      VAULT_DEV_ROOT_TOKEN_ID: 'myroot'
+      VAULT_TOKEN: 'myroot'
+      VAULT_API_ADDR: 'https://0.0.0.0:8200'
+      VAULT_CLUSTER_ADDR: 'http://0.0.0.0:8201'
+    cap_add:
+      - IPC_LOCK
+    healthcheck:
+      retries: 5
+    command: >
+        server -dev -dev-root-token-id="myroot"
+# Configure vault        
+  configure_vault:
+    image: curlimages/curl:7.79.1
+    depends_on:
+      - vault
+    restart: on-failure:5
+    entrypoint: >
+      /bin/sh -c '
+      sleep 10;
+      curl --header "X-Vault-Token: myroot" --request POST --data "{\"type\": \"kv\",\"option\": {\"version\": 1}}" http://vault:8200/v1/sys/mounts/secret-decat;
+      curl --header "X-Vault-Token: myroot" --request POST --data "{\"user\":\"docker\",\"password\":\"docker\"}" http://vault:8200/v1/secret-decat/datafactory/test/test/test_database/FR;
+      curl --header "X-Vault-Token: myroot" --request POST --data "{\"login\":\"docker\",\"password\":\"docker\"}" http://vault:8200/v1/secret-decat/datafactory/rds/datafactory-local/datafactory-job;
+      '      
+# Dremio Data exploration
+#  dremio:
+#    image: dremio
+#    hostname: dremio
+#    volumes:
+#      - dremio_data:/var/lib/dremio
+#    links:
+#      - "minio"
+#      - "postgres"
+#    ports:
+#      - "9047:9047"   # UI (HTTP)
+#      - "31010:31010" # ODBC/JDBC clients
+#      - "2181:2181"   # ZooKeeper
+#      - "45678:45678" # Inter-node communicatio
